--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,25 @@
   color: white;
 }
 
+.App-header ul {
+  list-style-type: none;
+  flex: 1;
+  text-align: right;
+  padding-right: 30px;
+}
+
+.App-header ul li {
+  display: inline;
+  text-align: center;
+  padding: 10px;
+}
+
+.App-header ul li a {
+  font-size: calc(5px + 2vmin);
+  color: #ffffff;
+  padding: 10px;
+}
+
 .App-link {
   color: #61dafb;
 }
